samples/_failures_safe/1761366496_710791_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fd7c268.c: In function ‘main’:
./samples/SAFE/__tmp_4fd7c268.c:145:5: error: expected declaration or statement at end of input
  145 |     graph_add_edge(&g, 3, 4, 1);
      |     ^~~~~~~~~~~~~~
